<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <!--    <group android:checkableBehavior="single">-->
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:visible="false"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_featured_play_list_black_24dp"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_chatbot"
            android:icon="@drawable/ic_chat_bubble_black_24dp"
            android:title="@string/menu_chatbot" />
        <item
            android:id="@+id/nav_coupon"
            android:icon="@drawable/ic_coupon_black_24dp"
            android:title="@string/menu_coupon"/>
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:title="@string/menu_logout"/>

    </group>

<!--    <item android:title="Communicate">-->
<!--    </item>-->

</menu>
