<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_navigation_item_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/activity_main_bottom_screen_home" />

    <item
        android:id="@+id/bottom_navigation_item_nav_partsCategory"
        android:icon="@drawable/ic_action_parts"
        android:title="@string/activity_main_bottom_screen_partsCategory"/>

    <item
        android:id="@+id/bottom_navigation_item_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/activity_main_bottom_screen_branch" />

    <item
        android:id="@+id/bottom_navigation_item_nav_profile"
        android:icon="@drawable/ic_action_person"
        android:title="@string/activity_main_bottom_screen_profile"/>

</menu>