<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/pColor0_almond"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="10dp"
    card_view:cardUseCompatPadding="true">
    <LinearLayout
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:text="@string/order_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/item_order_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:text="@string/order_title_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/item_order_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:text="@string/order_title_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/item_order_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />
        </LinearLayout>
    </LinearLayout>
<!--    android:paddingLeft="?android:attr/expandableListPreferredItemIndicatorRight"-->
</androidx.cardview.widget.CardView>

