<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pColor2_briLav"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="3dp"
        android:paddingEnd="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_product"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#16000000" />
            <TextView
                android:id="@+id/item_txt_id"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <TextView
                android:id="@+id/part_txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="sample"
                android:textColor="#212121"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_txt_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cart_type"
                android:textColor="#727272"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_txt_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cart_price"
                android:textColor="@color/dollar_color"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:layout_width="50dp"
            android:layout_height="40dp">
            <TextView
                android:text="@string/qty"
                android:layout_weight="0"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/item_txt_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:textSize="18sp"
                android:textColor="#5e06ff"
                android:text="1"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
